<?xml version="1.0" encoding="utf-8"?>

<androidx.compose.ui.platform.ComposeView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<androidx.drawerlayout.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/RelativeMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_light"
        android:layout_centerInParent="true">

        <ImageButton
            android:onClick="onClickExit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/drawer_corporation"
                    android:layout_width="156dp"
                    android:layout_height="69dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/corporation"/>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="1dp"
                android:background="@drawable/control_line"/>

            <LinearLayout
                android:id="@+id/layout_about_version"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:layout_gravity="start">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/black_btn_about"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/about_version"
                    style="@style/drawerText"/>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="1dp"
                android:background="@drawable/background_line"/>

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/layout_about_address"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                android:layout_gravity="start">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/black_btn_about_address"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/about_address"
                    style="@style/drawerText"/>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="1dp"
                android:background="@drawable/background_line"/>

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/layout_about_phone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:layout_gravity="start">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/black_btn_about_phone"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/about_phone"
                    style="@style/drawerText"/>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="1dp"
                android:background="@drawable/background_line"/>

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/layout_about_mail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:layout_gravity="start">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/black_btn_about_mail"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/about_mail"
                    style="@style/drawerText"/>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="1dp"
                android:background="@drawable/background_line"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>
</androidx.compose.ui.platform.ComposeView>